# CustusX

./: .gitignore  .gitmodules  .project  CMakeGraphVizOptions.cmake  CMakeLists.txt  CustusX_license.txt  Doxyfile  License.txt  QtCreatorLicenceTemplate.txt  README.md  cxBronchoscopePositionProjection.cpp  cxBronchoscopePositionProjection.h  cxBronchoscopyNavigation.cpp  cxBronchoscopyNavigationGUIExtenderService.cpp  cxBronchoscopyNavigationGUIExtenderService.h  cxBronchoscopyNavigationPluginActivator.cpp  cxBronchoscopyNavigationPluginActivator.h  cxBronchoscopyNavigationWidget.cpp  cxBronchoscopyNavigationWidget.h  cxVBPluginActivator.cpp  cxVBService.cpp  cxVBService.h  cxVBWidget.cpp  cxVBWidget.h  cxVBcameraPath.cpp  cxVBcameraPath.h  sscData.readme  version.ini
Code/: CMakeLists.txt  CMakeListsSINTEF.txt  ssc.h  sscForwardDeclarations.h  sscView.cpp  sscView.h  sscViewContainer.cpp  sscViewContainer.h  vtkForwardDeclarations.h
Code/Data/: sscAngleMetric.cpp  sscAngleMetric.h  sscData.cpp  sscData.h  sscDataInterface.h  sscDataManager.cpp  sscDataManager.h  sscDataManagerImpl.cpp  sscDataManagerImpl.h  sscDataMetric.cpp  sscDataMetric.h  sscDataReaderWriter.cpp  sscDistanceMetric.cpp  sscDistanceMetric.h  sscFiberBundle.cpp  sscFiberBundle.h  sscGPUImageBuffer.cpp  sscGPUImageBuffer.h  sscImage.cpp  sscImage.h  sscImageLUT2D.cpp  sscImageLUT2D.h  sscImageTF3D.cpp  sscImageTF3D.h  sscImageTFData.cpp  sscImageTFData.h  sscLandmark.cpp  sscLandmark.h  sscMesh.cpp  sscMesh.h  sscNavigatedVideoImage.cpp  sscNavigatedVideoImage.h  sscPlaneMetric.cpp  sscPlaneMetric.h  sscPointMetric.cpp  sscPointMetric.h  sscPresetTransferFunctions3D.cpp  sscPresetTransferFunctions3D.h  sscPresets.cpp  sscPresets.h  (+16 more)
Code/Math/: sscBoundingBox3D.cpp  sscBoundingBox3D.h  sscFrame3D.cpp  sscFrame3D.h  sscMathBase.h  sscMatrixBaseEigenAddons.h  sscPlainObjectEigenAddons.h  sscTransform3D.cpp  sscTransform3D.h  sscVector3D.cpp  sscVector3D.h
Code/Rep/: sscAngleMetricRep.cpp  sscAngleMetricRep.h  sscAxesRep.cpp  sscAxesRep.h  sscBlendedSliceRep.cpp  sscBlendedSliceRep.h  sscCrossHairRep2D.cpp  sscCrossHairRep2D.h  sscDataMetricRep.cpp  sscDataMetricRep.h  sscDataProxy.h  sscDisplayTextRep.cpp  sscDisplayTextRep.h  sscDistanceMetricRep.cpp  sscDistanceMetricRep.h  sscFiberBundleRep.cpp  sscFiberBundleRep.h  sscGPURayCastVolumePainter.cpp  sscGPURayCastVolumePainter.h  sscGPURayCastVolumeRep.cpp  sscGPURayCastVolumeRep.h  sscGeometricRep.cpp  sscGeometricRep.h  sscGeometricRep2D.cpp  sscGeometricRep2D.h  sscGuideRep2D.cpp  sscGuideRep2D.h  sscImageBlenderProxy.cpp  sscImageBlenderProxy.h  sscOrientationAnnotationRep.cpp  sscOrientationAnnotationRep.h  sscPickerRep.cpp  sscPickerRep.h  sscPlaneMetricRep.cpp  sscPlaneMetricRep.h  sscPointMetricRep.cpp  sscPointMetricRep.h  sscPointMetricRep2D.cpp  sscPointMetricRep2D.h  sscProbeRep.cpp  (+56 more)
Code/Tool/: sscDummyTool.cpp  sscDummyTool.h  sscDummyToolManager.cpp  sscDummyToolManager.h  sscManualTool.cpp  sscManualTool.h  sscProbe.h  sscProbeAdapterRTSource.cpp  sscProbeAdapterRTSource.h  sscProbeData.cpp  sscProbeData.h  sscProbeSector.cpp  sscProbeSector.h  sscTool.h  sscToolManager.cpp  sscToolManager.h
Code/UsReconstruction/: CMakeLists.txt  sscReconstructer.cpp  sscReconstructer.h  sscThunderVNNReconstructAlgorithm.cpp
Code/Utilities/: misc.h  sscAcceptanceBoxWidget.cpp  sscAcceptanceBoxWidget.h  sscApplication.cpp  sscAudio.h  sscBoundingBox3D.cpp  sscBoundingBox3D.h  sscConfig.h.in  sscCoordinateSystemHelpers.cpp  sscCoordinateSystemHelpers.h  sscCustomMetaImage.cpp  sscCustomMetaImage.h  sscDefinitionStrings.cpp  sscDefinitionStrings.h  sscDefinitions.cpp  sscDefinitions.h  sscEnumConverter.h  sscFrame3D.cpp  sscFrame3D.h  sscGLHelpers.cpp  sscGLHelpers.h  sscGraphicalPrimitives.cpp  sscGraphicalPrimitives.h  sscIndent.cpp  sscIndent.h  sscLogger.cpp  sscLogger.h  sscMD5Check.cpp  sscMD5Check.h  sscMeshHelpers.cpp  sscMeshHelpers.h  sscMessageManager.cpp  sscMessageManager.h  sscPlainObjectEigenAddons.h  sscPositionStorageFile.cpp  sscPositionStorageFile.h  sscSharedMemory.h  (+23 more)
DICOMLib/: CMakeLists.txt  DCMTK.cpp  DCMTK.h  DICOMLib.cpp  DICOMLib.h  convert.c  export.cpp  identify.c  identify.h  nifti1_io.c.REMOVED.git-id  niftiexport.cpp  sscDICOMLibAPI.cpp  sscDICOMLibAPI.h  znzlib.c
Test/: CMakeLists.txt  main.cpp  sscConfig.h.in  sscTestDataManager.cpp  sscTestInterface.cpp  sscTestInterface.h  sscTestUtilities.h
Testing/: CMakeLists.txt  ctest2junit.xsl  sscCPPUnitMain.cpp  sscTestBoundingBox3D.cpp  sscTestDataManager.cpp  sscTestFiberBundleRep.cpp  sscTestFiberBundleVolumetricRep.cpp  sscTestGPURayCaster.cpp  sscTestGPURayCaster.h  sscTestInterface.cpp  sscTestMeshAndDataManager.cpp  sscTestMeshDMGeoRepView.cpp  sscTestRender.cpp  sscTestRenderSpeed.cpp  sscTestRenderSpeed.h  sscTestRenderVolumetricRep.cpp  sscTestSliceAndOverlayImage.cpp  sscTestSliceAndOverlayImage.h  sscTestSliceAndToolRep.cpp  sscTestSliceAndToolRep.h  sscTestSliceComputer.cpp  sscTestSlicePlaneRep.cpp  sscTestSlicePlaneRep.h  sscTestSliceRep.cpp  sscTestSpaceOrganizer.cpp  sscTestSpaceOrganizer.h  sscTestTransform3D.cpp  sscTestTransform3D.h  sscTestUtilityClasses.cpp  sscTestUtilityClasses.h  sscTestVideoGraphics.cpp  sscTestViewContainer.cpp  sscTestViewContainer.h  sscTestVisualRendering.cpp  sscTestVisualRendering.h  sscViewsWindow.cpp  sscViewsWindow.h  sscVtkRenderTester.cpp  sscVtkRenderTester.h
doc/: CMakeLists.txt  CodeStandardCustusX3.txt  Doxyfile.in  SupportedGrabbers.txt  cx_code_standard.odt  cx_doxyfile.dox.in  cx_user_doc.qhcp.in  doxy_footer_empty.html
documentation/: CMakeLists.txt  Doxyfile.in.bak  cx_doxyfile.dox.in  cx_user_doc_coordinate_systems.dox  cx_user_doc_core_widgets.md  cx_user_doc_main_page.md  cx_user_doc_widgets3.dox  doxy_header_empty.html
source/: CMakeLists.txt  cxForwardDeclarations.h  cxMain.cpp  cxMainWindowApplicationComponent.h
testing/: CMakeLists.txt  cxCppUnitMain.cpp  cxTestSpeed.cpp  cxTestSpeed.h  cxTest_Example_CppUnit.cpp  cxTest_Example_CppUnit.h  cxTest_Example_RenderVolumetricRep.cpp  cxTest_Example_Simple.cpp
(+6175 files in other folders)
